# Android_CFI

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libhello-jnicallback.cpp  libhello-test.cpp  libhello-test.h
app/src/main/java/com/example/myapplication3/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
